--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,22 @@
 .App {
   text-align: center;
-}
-
-.App-header {
   background-color: white;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   color: #282c34;
-  margin-top: 20px;
+}
+
+.App-header {
+  color: #282c34;
+  margin: 20px auto;
   font-weight: 900;
   font-size: 4vw;
 }
 
 .App-footer {
+  margin: 20px auto;
   font-size: 1vw;
   color: #282c34;
 }
