[ADD] Synonyms component to render synonyms for each definition, styled it in Meaning.css

--- a/src/App.css
+++ b/src/App.css
@@ -25,3 +25,9 @@
   text-decoration: underline;
   color: #282c34;
 }
+main {
+  margin: 0 60px;
+}
+/* bring in normalize.css styles
+@import-normalize;  */
+/* rest of app styles */
