--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,5 +1,15 @@
 .Meaning {
-  margin: 10px auto;
+  text-align: left;
+  padding: 20px;
+  margin: 30px auto;
   border: 1px solid black;
   border-radius: 5px;
+}
+
+.synonym {
+  padding: 3px 10px;
+  margin: 6px 3px;
+  line-height: 2;
+  border: 1px solid rgb(177, 177, 177);
+  border-radius: 50px;
 }
