--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -7,7 +7,7 @@
 }
 
 .synonym {
-  padding: 3px 10px;
+  padding: 3px 10px 4px;
   margin: 6px 3px;
   line-height: 2;
   border: 1px solid rgb(177, 177, 177);
