--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,43 @@
-.App {
-  margin: 20px;
-  background-color: white;
-  color: #282c34;
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+
+body {
+  font-family: "Ubuntu", sans-serif;
+  color: #212121;
+  background-image: linear-gradient(
+    to top,
+    #dbdcd7 0%,
+    #dddcd7 24%,
+    #e2c9cc 30%,
+    #e7627d 46%,
+    #b8235a 59%,
+    #801357 71%,
+    #3d1635 84%,
+    #1c1a27 100%
+  );
+  min-height: 100vh;
 }
 
-.App-header {
-  color: #282c34;
+.App {
+  margin: 20px;
+  color: #212121;
+}
+
+h1.App-header {
+  color: #f0f0f0;
   text-align: center;
   margin: 20px auto;
+  font-size: 6vw;
   font-weight: 900;
-  font-size: 4vw;
 }
 
 .App-footer {
+  font-weight: 500;
   text-align: center;
   margin: 20px auto;
-  font-size: 1vw;
-  color: #282c34;
+  font-size: 1.5vw;
 }
 
 .App-link {
+  color: #212121;
   text-decoration: underline;
-  color: #282c34;
 }
-/* bring in normalize.css styles
-@import-normalize;  */
-/* rest of app styles */
