--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ h1.App-header {
 .App-footer {
   font-weight: 500;
   text-align: center;
-  margin: 20px auto;
+  margin-top: 20px;
   font-size: 1.5vw;
 }
 
