--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .App {
-  margin: 20px;
+  margin: 20px auto;
   color: #212121;
+  max-width: 960px;
 }
 
 h1.App-header {
   color: #f0f0f0;
   text-align: center;
   margin: 20px auto;
-  font-size: 6vw;
+  font-size: 45px;
   font-weight: 900;
 }
 
@@ -15,7 +16,7 @@ h1.App-header {
   font-weight: 500;
   text-align: center;
   margin-top: 20px;
-  font-size: 1.5vw;
+  font-size: 13px;
 }
 
 .App-link {
