--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -6,39 +6,43 @@
   box-shadow: 0 4px 4px 0 rgba(167, 108, 158, 0.3);
 }
 
-h2.Word {
-  font-size: 3.8vw;
-  margin-bottom: 5px;
-}
-
-h2.Meaning {
-  font-size: 2.8vw;
-  text-align: left;
-  font-weight: 700;
-}
-
-.Dictionary h3 {
-  font-size: 2.8vw;
-  text-align: center;
-}
-
 .Dictionary input {
   width: 100%;
   color: #3d1635;
-  font-size: 1.8vw;
-  border-radius: 15px;
+  font-size: 16px;
+  border-radius: 17px;
   padding: 15px 15px;
   border: 1px solid #aa6f9393;
 }
 
 .Dictionary input.form-control:active,
 .Dictionary input.form-control:focus {
-  border-color: rgb(167, 108, 158);
+  border-color: rgba(167, 108, 158, 0.35);
   box-shadow: 0 0 0 0.2rem rgba(167, 108, 158, 0.35);
 }
 
+.Dictionary .Hint {
+  font-size: 10px;
+  margin-top: 5px;
+  margin-left: 18px;
+}
+
+h2.Word {
+  font-size: 27px;
+  margin-bottom: 5px;
+}
+
+.Meaning h2 {
+  font-size: 25px;
+}
+
+.Dictionary h3 {
+  font-size: 22px;
+  text-align: center;
+}
+
 span.Transcription {
-  font-size: 2.7vw;
+  font-size: 20px;
   color: #834777;
   margin-right: 10px;
   padding: 0;
@@ -53,37 +57,37 @@ audio {
   border-radius: 20px;
 }
 
+audio:active,
+audio:focus {
+  box-shadow: 0 0 0 0.2rem rgba(167, 108, 158, 0.35);
+  outline-style: none;
+}
+
 strong {
   color: #834777;
   margin: 10px 0;
-  font-size: 2.4vw;
-}
-
-.Dictionary .Hint {
-  font-size: 1vw;
-  margin-top: 5px;
-  margin-left: 8px;
+  font-size: 17px;
 }
 
 .Definition {
-  font-size: 2.3vw;
+  font-size: 17px;
   margin: 8px 0;
 }
 
 .Dictionary .Examples {
-  font-size: 2vw;
+  font-size: 15.5px;
   color: #6d6b6b;
-  margin: 2px 0 5px 8px;
+  margin: 2px 0 5px 15px;
 }
 
 .Synonyms {
-  font-size: 2vw;
+  line-height: 18px;
+  font-size: 17px;
   margin: 5px 0 5px 17px;
 }
 
 .synonym {
   font-size: 11px;
-  line-height: 18px;
   padding: 1px 11px 2px;
   margin: 0px 5px 3px 0px;
   overflow-wrap: break-word;
