--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -52,7 +52,7 @@ audio {
   width: 240px;
   height: 37px;
   vertical-align: middle;
-  margin: 0;
+  margin: 5px 0;
   border: 1px solid #a7548760;
   border-radius: 20px;
 }
