--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,6 +1,6 @@
 .Dictionary section {
   background: #f3f1f1;
-  padding: 30px;
+  padding: 25px;
   margin: 20px;
   border-radius: 10px;
   box-shadow: 0 4px 4px 0 rgba(167, 108, 158, 0.3);
@@ -100,7 +100,35 @@ strong {
   overflow-wrap: break-word;
 }
 
-.Photos img {
+.Photos ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.Photos li {
+  height: 15vh;
+  flex-grow: 1;
+  padding: 5px;
+}
+
+.Photos li:last-child {
+  flex-grow: 10;
+}
+
+.Photos img.image-search {
   border-radius: 4px;
-  margin-bottom: 20px;
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
+.Photos img.pixabay-logo {
+  display: block;
+  margin: 0 auto;
+  height: 20px;
+  width: auto;
 }
